Add logo to header

--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link href="./style.css" rel="stylesheet"> 
+    <title>Tea Cozy</title>
 </head>
 <body>
     <header>
-        
+        <img id='logo' src='https://content.codecademy.com/courses/freelance-1/unit-4/img-tea-cozy-logo.png' alt='logo'>
     </header>
     
 </body>
