add html header content

--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
 </head>
 <body>
     <header>
-        <img id='logo' src='https://content.codecademy.com/courses/freelance-1/unit-4/img-tea-cozy-logo.png' alt='logo'>
+        <img id='logo' src='resources/img-tea-cozy-logo.webp' alt='logo'>
+        <div>
+            <p>Mission</p>
+            <p>Featured Tea</p>
+            <p>Locations</p>
+        </div>
     </header>
     
 </body>
