add background for mission section

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
             <p>Locations</p>
         </div>
     </header>
-    
+    <article id='mission'>
+        <img id='back-image' src="./resources/img-mission-background.webp" alt='pot of dried fruits'>
+    </article>
 </body>
 </html>
