--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
         </div>
     </header>
     <article id='mission'>
-        <img id='back-image' src="./resources/img-mission-background.webp" alt='pot of dried fruits'>
+        <div>
+            <h2>Our Mission</h2>
+            <h4>Handpicked, Artisnally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
+        </div>
     </article>
 </body>
 </html>
