Add images for tea section

--- a/index.html
+++ b/index.html
@@ -22,5 +22,29 @@
             <h4>Handpicked, Artisnally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
         </div>
     </article>
+    <h2>Tea of the Month</h2>
+    <h4>What's Steeping at The Tea Cozy</h4>
+    <article id='teas'>
+        <div class="container">
+            <img src="./resources/img-berryblitz.webp" alt="berries in hot tea">
+            <p>Fall Berry Blitz Tea</p>
+        </div>
+        <div class="container">
+            <img src="./resources/img-spiced-rum.webp" alt="handmade wooden box containing tea">
+            <p>Spiced Rum Tea</p>
+        </div>
+        <div class="container">
+            <img src="./resources/img-donut.webp" alt="rustic frosted donut on a sqaure plate">
+            <p>Seasonal Donuts</p>
+        </div>
+        <div class="container">
+            <img src="./resources/img-myrtle-ave.webp" alt="cup of tea covered with a veil">
+            <p>Myrtle Ave Tea</p>
+        </div>
+        <div class="container">
+            <img src="./resources/img-bedford-bizarre.webp" alt="tea on table along with mason jar full of sugar">
+            <p>Bedford Bizarre Tea</p>
+        </div>
+    </article>
 </body>
 </html>
