Add html content for locations section

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div>
             <p>Mission</p>
             <p>Featured Tea</p>
-            <p>Locations</p>
+            <p id='right-side'>Locations</p>
         </div>
     </header>
     <article id='mission'>
@@ -44,6 +44,28 @@
         <div class="container">
             <img src="./resources/img-bedford-bizarre.webp" alt="tea on table along with mason jar full of sugar">
             <p>Bedford Bizarre Tea</p>
+        </div>
+    </article>
+    <article id="locations">
+        <div id="flex">
+            <div>
+                <h3>Downtown</h3>
+                <p>384 West 4th St</p>
+                <p>Suite 108</p>
+                <p>Portland, Maine</p>
+            </div>
+            <div>
+                <h3>East Bayside</h3>
+                <p>3433 Phisherman's Avenue</p>
+                <p>(Northwest Corner)</p>
+                <p>Portland, Maine</p>
+            </div>
+            <div>
+                <h3>Oakdale</h3>
+                <p>513 Crescent Avenue</p>
+                <p>Second Floor</p>
+                <p>Portland, Maine</p>
+            </div>
         </div>
     </article>
 </body>
