--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
         </div>
     </article>
     <article id="locations">
+        <h2>Locations</h2>
         <div id="flex">
             <div>
                 <h3>Downtown</h3>
