--- a/index.html
+++ b/index.html
@@ -69,5 +69,13 @@
             </div>
         </div>
     </article>
+    <article id='contact'>
+        <h2>The Tea Cosy</h2>
+        <h5>contact@theteacosy.com</h5>
+        <p>917-555-8904</p>
+    </article>
+    <footer>
+        <p>copyright The Tea Cozy 2017</p>
+    </footer>
 </body>
 </html>
